# tg-bot-yt-dlp

./: README.md  pyproject.toml
tests/: test_tg_bot_yt_dlp.py
tg_bot_yt_dlp/: genrss.py
tg_bot_yt_dlp/scripts/: start_bot.py
